# snake-rust-wasm

./: Cargo.toml  Makefile  README.md  index.html
.github/workflows/: deploy.yaml
pkg/: README.md  package.json  snake_rust_wasm.d.ts  snake_rust_wasm.js  snake_rust_wasm_bg.wasm  snake_rust_wasm_bg.wasm.d.ts
src/: game.rs  lib.rs  utils.rs
src/render/: mod.rs  web.rs
