[package]
name = "snake_rust_wasm"
version = "0.1.0"
edition = "2024"
authors = ["Xmchx sunhuayangak47@gmail.com"]
description = "Snake"
license = "MIT/Apache-2.0"
repository = "https://github.com/Ysoding/snake-rust-wasm"

[features]
default = ["dev"]
dev = []
dynamic_camera = []


[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.77", features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  "EventTarget",
  "console",
  "KeyboardEvent",
] }

[lib]
crate-type = ["cdylib"]


[profile.release]
panic = "unwind"
